2007-08-24  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (check_child_position): Initialize the position
	variable before bitwise ORing it.

2007-08-23  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-render.c (theme_pixbuf_render): When painting centered
	pixmaps don't expand but draw at most the size of the pixmap. Fixes
	uninitialized garbage appearing on screen when painting an arrow that
	is downscaled only in one direction.

2007-08-23  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-pixmap.c (sapwood_pixmap_render_rects_internal): handle
	mask == NULL without generating warnings

2007-08-23  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-render.c (theme_pixbuf_render): When limiting the mask
	to (smaller) clip rectangle, calculate the mask offset correctly.

2007-08-22  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* === Release 2.91.7 ===

2007-08-22  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (get_window_for_shape, draw_simple_image,
	draw_expander): Assume 'widget' can be NULL and don't crash. Pointed
	out by Frank Li.

2007-08-22  Lucas Rocha  <lucas.rocha@nokia.com>

	* src/sapwood-draw.c (maybe_check_submenu_state): cover menu items in
	hildon desktop custom menu widget (NB#60575)

2007-08-22  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (draw_arrow): Ignore arrows of type none. (Patch
	from Xan, added #ifdef guard) (NB#61844)
	* src/theme-pixbuf.h (ThemeMatchData): Replace GtkArrowType with
	'guint : 2' to silence compiler warnings. (GtkArrowType was extended
	with 'NONE' which doesn't make sense in rc files.)

2007-08-22  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* HACKING
	* src/sapwood-proto.h (PixbufOpenRequest)
	* src/theme-pixbuf.h (ThemePixbuf): increase the size of the border
	variables from 8 to 16 bits to allow larger borders. (NB#63819)
	NOTE: this breaks the binary protocol between client and the server
